content/v1.3.0/zh/api/campaign/TroopRosterElement.md
---
title: "TroopRosterElement"
---
<!-- BEGIN BREADCRUMB -->
**首页** → **API 目录** → **本领域** → `TroopRosterElement`
- [← 本领域 / 返回 campaign](./)
- [↑ API 目录](../)
- [🏠 首页 v1.3.0](../../)
- [⭐ 版本架构](../../architecture/)
<!-- END BREADCRUMB -->
# TroopRosterElement

**Namespace:** TaleWorlds.CampaignSystem.Roster
**Module:** TaleWorlds.CampaignSystem
**Type:** `public struct TroopRosterElement : ISerializableObject, ISavedStruct`
**Base:** `ISerializableObject`
**File:** `TaleWorlds.CampaignSystem/Roster/TroopRosterElement.cs`

## 概述

`TroopRosterElement` 位于 `TaleWorlds.CampaignSystem.Roster`，它通过这组公开成员把对应子系统的状态、行为或流程入口暴露给 mod 开发者。阅读时先看属性代表“它持有什么状态”，再看方法代表“它允许你做什么”。

## 心智模型

先从命名空间 `TaleWorlds.CampaignSystem.Roster` 判断它属于哪层系统，再看公开方法：如果以 Get/Set 为主，它多半是状态对象；如果以 Create/Apply/Execute 为主，它更像服务或流程入口。

## 主要属性

| Name | Signature |
|------|-----------|
| `Invalid` | `public static TroopRosterElement Invalid { get; set; }` |
| `Number` | `public int Number { get; set; }` |
| `WoundedNumber` | `public int WoundedNumber { get; set; }` |
| `Xp` | `public int Xp { get; set; }` |

## 主要方法

### AutoGeneratedStaticCollectObjectsTroopRosterElement
`public static void AutoGeneratedStaticCollectObjectsTroopRosterElement(object o, List<object> collectedObjects)`

**用途 / Purpose:** 处理 `auto generated static collect objects troop roster element` 相关逻辑。

### ToString
`public override string ToString()`

**用途 / Purpose:** 处理 `to string` 相关逻辑。

### Equals
`public override bool Equals(object obj)`

**用途 / Purpose:** 处理 `equals` 相关逻辑。

### Equals
`public bool Equals(TroopRosterElement other)`

**用途 / Purpose:** 处理 `equals` 相关逻辑。

### GetHashCode
`public override int GetHashCode()`

**用途 / Purpose:** 获取 `hash code` 的当前值。

## 使用示例

```csharp
TroopRosterElement.AutoGeneratedStaticCollectObjectsTroopRosterElement(o, collectedObjects);
```

## 参见

- [完整类目录](../catalog)