content/v1.4.5/zh/api/campaign/TroopRosterElement.md
---
title: "TroopRosterElement"
description: "TroopRosterElement 的自动生成类参考。"
---
# TroopRosterElement

**Namespace:** TaleWorlds.CampaignSystem.Roster
**Module:** TaleWorlds.CampaignSystem
**Type:** `public struct TroopRosterElement : ISerializableObject, ISavedStruct`
**Base:** `ISerializableObject`
**File:** `bin/TaleWorlds.CampaignSystem/TaleWorlds.CampaignSystem.Roster/TroopRosterElement.cs`

## 概述

`TroopRosterElement` 位于 `TaleWorlds.CampaignSystem.Roster`，它通过这组公开成员把对应子系统的状态、行为或流程入口暴露给 mod 开发者。阅读时先看属性代表“它持有什么状态”，再看方法代表“它允许你做什么”。

## 心智模型

先从命名空间 `TaleWorlds.CampaignSystem.Roster` 判断它属于哪层系统，再看公开方法：如果以 Get/Set 为主，它多半是状态对象；如果以 Create/Apply/Execute 为主，它更像服务或流程入口。

## 主要属性

| Name | Signature |
|------|-----------|
| `Number` | `public int Number { get; set; }` |
| `WoundedNumber` | `public int WoundedNumber { get; set; }` |
| `Xp` | `public int Xp { get; set; }` |

## 主要方法

### AutoGeneratedStaticCollectObjectsTroopRosterElement
`public static void AutoGeneratedStaticCollectObjectsTroopRosterElement(object o, List<object> collectedObjects)`

**用途 / Purpose:** **用途 / Purpose:** 调用 AutoGeneratedStaticCollectObjectsTroopRosterElement 对应的操作。

```csharp
// 静态调用，不需要实例
TroopRosterElement.AutoGeneratedStaticCollectObjectsTroopRosterElement(o, collectedObjects);
```

### ToString
`public override string ToString()`

**用途 / Purpose:** **用途 / Purpose:** 返回当前对象的人类可读字符串表示。

```csharp
// 先通过子系统 API 拿到 TroopRosterElement 实例
TroopRosterElement troopRosterElement = ...;
var result = troopRosterElement.ToString();
```

### Equals
`public override bool Equals(object obj)`

**用途 / Purpose:** **用途 / Purpose:** 比较当前对象与传入实例是否相等。

```csharp
// 先通过子系统 API 拿到 TroopRosterElement 实例
TroopRosterElement troopRosterElement = ...;
var result = troopRosterElement.Equals(obj);
```

### Equals
`public bool Equals(TroopRosterElement other)`

**用途 / Purpose:** **用途 / Purpose:** 比较当前对象与传入实例是否相等。

```csharp
// 先通过子系统 API 拿到 TroopRosterElement 实例
TroopRosterElement troopRosterElement = ...;
var result = troopRosterElement.Equals(other);
```

### GetHashCode
`public override int GetHashCode()`

**用途 / Purpose:** **用途 / Purpose:** 返回当前对象的哈希码，用于字典或哈希集合中的快速查找。

```csharp
// 先通过子系统 API 拿到 TroopRosterElement 实例
TroopRosterElement troopRosterElement = ...;
var result = troopRosterElement.GetHashCode();
```

## 使用示例

```csharp
TroopRosterElement.AutoGeneratedStaticCollectObjectsTroopRosterElement(o, collectedObjects);
```

## 参见

- [本区域目录](../)